# test

./: .gitignore
verilog/: counter.v
yedera/: .gitignore  CMakeLists.txt  README.md  yedera.conf
yedera/src/: cli.cpp  cli.hpp  debug.cpp  debug.hpp  main.cpp  options.hpp  paths.cpp  paths.hpp  pull.cpp  pull.hpp  rag.cpp  rag.hpp  runtime.cpp  runtime.hpp  token_list.hpp
yedera/tests/: cli_integration_test.cmake  cli_tests.cpp  rag_tests.cpp  runtime_tests.cpp
